[New Feature] + Data user from mansion server can register to the client, default false + Mansion client can interact to mansion server in one ip, if the server not have loopback IP

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
         "laravel": {
             "providers": [
                 "Iqionly\\MansionClient\\MansionServiceProvider"
+            ],
+            "dont-discover": [
+                "*"
             ]
         }
     },
